--- a/core/src/components/datetime/datetime.ios.scss
+++ b/core/src/components/datetime/datetime.ios.scss
@@ -90,8 +90,80 @@
 
 :host .calendar-body .calendar-month {
   @include padding($datetime-ios-padding / 2, $datetime-ios-padding / 2, $datetime-ios-padding / 2, $datetime-ios-padding / 2);
+}
+
+:host .calendar-day {
+  position: relative;
 
   font-size: 20px;
+}
+
+:host .calendar-day:after {
+  @include border-radius(32px, 32px, 32px, 32px);
+  @include padding(4px, 4px, 4px, 4px);
+
+  position: absolute;
+
+  width: 32px;
+  height: 32px;
+
+  content: " ";
+
+  opacity: 0.2;
+
+  z-index: -1;
+}
+
+:host .calendar-day:focus:after {
+  background: current-color(base);
+
+  opacity: 0.1;
+}
+
+/**
+ * Day that today but not selected
+ * should have ion-color for text color.
+ */
+:host .calendar-day.calendar-day-today {
+  color: current-color(base);
+}
+
+/**
+ * Day that is not today but
+ * is selected should have ion-color for
+ * text color and be bolder.
+ */
+:host .calendar-day.calendar-day-active {
+  color: current-color(base);
+
+  font-weight: 600;
+}
+
+:host .calendar-day.calendar-day-active:after {
+  background: current-color(base);
+}
+
+/**
+ * Day that is not today but
+ * is selected should have ion-color for
+ * text color and be bolder.
+ */
+:host .calendar-day.calendar-day-active .calendar-day-content {
+  background: current-color(contrast);
+}
+
+/**
+ * Day that is selected and is today
+ * should have white color.
+ */
+:host .calendar-day.calendar-day-today.calendar-day-active {
+  color: var(--ion-text-color, #ffffff);
+}
+
+:host .calendar-day.calendar-day-today.calendar-day-active:after {
+  background: current-color(base);
+
+  opacity: 1;
 }
 
 // Footer
