--- a/core/src/components/item/test/bottom/index.html
+++ b/core/src/components/item/test/bottom/index.html
@@ -33,7 +33,7 @@
             </ion-item>
           </ion-col>
           <ion-col>
-            <ion-item counter="true" fill="solid">
+            <ion-item class="ion-invalid" counter="true" fill="solid">
               <ion-label position="floating">Helper, Counter, Error</ion-label>
               <ion-input required="true" maxlength="10" minlength="4"></ion-input>
               <ion-note slot="helper">This is a helper message.</ion-note>
