--- a/core/src/components/item/test/fill/index.html
+++ b/core/src/components/item/test/fill/index.html
@@ -79,7 +79,7 @@
         <ion-row>
           <ion-col>
             <ion-item fill="outline">
-              <ion-label position="floating">Standard</ion-label>
+              <ion-label position="floating">Standards</ion-label>
               <ion-input></ion-input>
             </ion-item>
           </ion-col>
