--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -406,6 +406,7 @@ button, a {
 
 :host(.item-interactive.ion-invalid) {
   --highlight-background: var(--highlight-color-invalid);
+  caret-color: var(--highlight-color-invalid);
 
   & ::slotted([slot="helper"]) {
     display: none;
