hide notch when there is no label

--- a/core/src/components/item/item.md.scss
+++ b/core/src/components/item/item.md.scss
@@ -27,6 +27,7 @@
   --highlight-color-invalid: #{$item-md-input-highlight-color-invalid};
   --label-computed-width: 0px;
   --notch-padding: 4px;
+  --show-notch: 0;
 
   font-size: $item-md-font-size;
   font-weight: normal;
