--- a/core/src/components/item/item.md.scss
+++ b/core/src/components/item/item.md.scss
@@ -40,13 +40,15 @@
 // --------------------------------------------------
 
 :host(.ion-color.ion-activated) .item-native {
-  caret-color: #{$item-md-border-bottom-color};
-
   &::after {
     background: transparent;
   }
 }
 
+:host(.item-has-focus) .item-native {
+  caret-color: var(--highlight-color-focused);
+  background-color: rgba(var(--background-focused), .5);
+}
 
 // Material Design Item Lines
 // --------------------------------------------------
@@ -213,7 +215,6 @@
 
 ::slotted(ion-label) {
   @include margin($item-md-label-margin-top, $item-md-label-margin-end, $item-md-label-margin-bottom, $item-md-label-margin-start);
-  max-width: min-content !important;
 }
 
 
@@ -311,6 +312,18 @@
   --inner-border-width: 0;
 }
 
+:host(.item-fill-solid.item-has-focus) .item-native {
+  border: none;
+
+  .item-highlight-bottom {
+    @include overlay;
+    
+    border-bottom-style: var(--border-style);
+    border-bottom-color: var(--highlight-color-focused);
+    border-bottom-width: 2px;
+  }
+}
+
 :host(.item-fill-solid.item-shape-round) {
   @include border-radius(16px, 16px, 0, 0);
 }
@@ -320,6 +333,7 @@
 
 :host(.item-fill-outline) {
   overflow: visible;
+  border: none;
 
   --border-color: #9e9e9e;
 
@@ -329,25 +343,18 @@
 :host(.item-fill-outline) .item-native {
   @include border-radius(4px);
   border: none;
+  --native-padding-left: 16px;
 
-  ::slotted(ion-label) {
-    max-width: min-content;
+  ::slotted(ion-input) {
+    transform: translateY(calc(-25% * var(--show-notch)));
   }
 
   .item-highlight-top,
   .item-highlight-before,
   .item-highlight-after,
   .item-highlight-bottom {
-    @include border-radius(4px);
-    @include position(null, 0, 0, 0);
-    border-radius: inherit;
-    box-sizing: content-box;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    pointer-events: none;
+    @include overlay;
     
-    --native-padding-left: 16px;
     border-width: var(--border-width);
     border-style: var(--border-style);
     border-color: var(--border-color);
@@ -370,8 +377,24 @@
   }
 }
 
-:host(.item-has-focus) .item-highlight-top {
-  visibility: hidden;
+:host(.item-fill-outline.item-has-focus) .item-native {
+  .item-highlight-top,
+  .item-highlight-before,
+  .item-highlight-after,
+  .item-highlight-bottom {
+    border-color: var(--highlight-color-focused);
+    border-width: 2px;
+  }
+}
+
+:host(.item-fill-outline:is(.item-has-focus,.item-has-value)) .item-native {
+  ::slotted(ion-label) {
+    max-width: min-content !important;
+  }
+
+  .item-highlight-top {
+    visibility: hidden;
+  }
 }
 
 :host(.item-fill-outline.item-shape-round) .item-native {
