--- a/core/src/components/datetime/test/demo/index.html
+++ b/core/src/components/datetime/test/demo/index.html
@@ -26,7 +26,7 @@
       }
 
       ion-datetime.md {
-        height: 520px;
+        height: 529px;
 
         border-radius: 4px;
 
@@ -203,6 +203,10 @@
         --ion-tab-bar-background: #1f1f1f;
 
         --ion-card-background: #1e1e1e;
+      }
+
+      ion-content::part(scroll) {
+        touch-action: auto;
       }
     </style>
   </head>
