--- a/core/src/components/datetime/datetime.ios.scss
+++ b/core/src/components/datetime/datetime.ios.scss
@@ -84,34 +84,26 @@
 
 // Calendar / Body
 // -----------------------------------
-:host .calendar-body {
-  height: 100%;
-}
+:host .calendar-body .calendar-month .calendar-month-grid {
 
-:host .calendar-body .calendar-month {
+  /**
+   * We need to apply the padding to
+   * each month grid item otherwise
+   * older versions of WebKit will consider
+   * this padding a snapping point if applied
+   * on .calendar-month
+   */
   @include padding($datetime-ios-padding / 2, $datetime-ios-padding / 2, $datetime-ios-padding / 2, $datetime-ios-padding / 2);
+
+  height: calc(100% - #{$datetime-ios-padding});
 }
 
 :host .calendar-day {
-  position: relative;
-
   font-size: 20px;
 }
 
 :host .calendar-day:after {
-  @include border-radius(32px, 32px, 32px, 32px);
-  @include padding(4px, 4px, 4px, 4px);
-
-  position: absolute;
-
-  width: 32px;
-  height: 32px;
-
-  content: " ";
-
   opacity: 0.2;
-
-  z-index: -1;
 }
 
 :host .calendar-day:focus:after {
