implement max and min

--- a/core/src/components/datetime/test/demo/index.html
+++ b/core/src/components/datetime/test/demo/index.html
@@ -231,7 +231,7 @@
           </ion-item>
         </div>
 
-        <ion-datetime>
+        <ion-datetime min="2021-04-15" max="2021-05-13">
           <span slot="title">Select Date</span>
           <ion-buttons slot="buttons">
             <ion-button color="primary">Cancel</ion-button>
