--- a/core/src/components/datetime/test/demo/index.html
+++ b/core/src/components/datetime/test/demo/index.html
@@ -42,7 +42,7 @@
       }
 
       ion-datetime.ios {
-        height: 376px;
+        height: 384px;
 
         border-radius: 12px;
       }
@@ -231,7 +231,7 @@
           </ion-item>
         </div>
 
-        <ion-datetime min="2021-04-15" max="2021-05-13">
+        <ion-datetime>
           <span slot="title">Select Date</span>
           <ion-buttons slot="buttons">
             <ion-button color="primary">Cancel</ion-button>
