--- a/core/src/components/skeleton-text/skeleton-text.scss
+++ b/core/src/components/skeleton-text/skeleton-text.scss
@@ -47,35 +47,28 @@ span {
 :host(.skeleton-text-animated) {
   position: relative;
 
-  overflow: hidden;
-
-  &::after {
-    position: absolute;
-    /* stylelint-disable property-blacklist */
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    /* stylelint-enable property-blacklist */
-
-    transform: translateX(-100%);
-
-    background: linear-gradient(
-      to right,
-      $skeleton-text-background 8%,
-      $skeleton-text-background-animated 18%,
-      $skeleton-text-background 33%
-    );
-
-    content: "";
-    animation: shimmer 1s infinite;
-  }
+  background: linear-gradient(
+    to right,
+    $skeleton-text-background 8%,
+    $skeleton-text-background-animated 18%,
+    $skeleton-text-background 33%
+  );
+  background-size: 800px 104px;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: shimmer;
+  animation-timing-function: linear;
 }
 
 /* stylelint-disable property-blacklist */
 @keyframes shimmer {
+  0% {
+    background-position: -400px 0;
+  }
+
   100% {
-    transform: translateX(100%);
+    background-position: 400px 0;
   }
 }
 /* stylelint-enable property-blacklist */
