--- a/core/src/components/action-sheet/test/basic/index.html
+++ b/core/src/components/action-sheet/test/basic/index.html
@@ -69,8 +69,8 @@
     async function presentBasic() {
       const mode = Ionic.mode;
       await openActionSheet({
-        header: "Delete Event",
-        subHeader: "Are you sure you want to delete this event?",
+        header: "Delete Album",
+        subHeader: "Are you sure you want to delete this album?",
         buttons: [{
           text: 'Delete Event',
           role: 'destructive',
