--- a/core/src/components/action-sheet/test/basic/index.html
+++ b/core/src/components/action-sheet/test/basic/index.html
@@ -72,7 +72,7 @@
         header: "Delete Album",
         subHeader: "Are you sure you want to delete this album?",
         buttons: [{
-          text: 'Delete Event',
+          text: 'Delete',
           role: 'destructive',
           icon: 'trash',
           handler: () => {
