--- a/core/src/components/datetime/test/demo/index.html
+++ b/core/src/components/datetime/test/demo/index.html
@@ -42,7 +42,7 @@
       }
 
       ion-datetime.ios {
-        height: 384px;
+        height: 440px;
 
         border-radius: 12px;
       }
@@ -225,9 +225,21 @@
             <ion-label>MD Mode</ion-label>
           </ion-item>
 
-          <ion-item lines="none"">
+          <ion-item lines="none">
             <ion-label>Locale</ion-label>
             <ion-input placeholder="default" id="locale"></ion-input>
+          </ion-item>
+
+          <ion-item lines="none">
+            <ion-label>Color</ion-label>
+            <ion-select id="color" value="primary">
+              <ion-select-option value="primary">Primary</ion-select-option>
+              <ion-select-option value="secondary">Secondary</ion-select-option>
+              <ion-select-option value="tertiary">Tertiary</ion-select-option>
+              <ion-select-option value="success">Success</ion-select-option>
+              <ion-select-option value="warning">Warning</ion-select-option>
+              <ion-select-option value="danger">Danger</ion-select-option>
+            </ion-select>
           </ion-item>
         </div>
 
@@ -241,8 +253,11 @@
       </ion-content>
     </ion-app>
     <script>
+      const color = document.querySelector('#color');
       const locale = document.querySelector('#locale');
       const datetime = document.querySelector('ion-datetime');
+      const buttons = document.querySelectorAll('ion-button');
+
       locale.addEventListener('ionBlur', (ev) => {
         const value = ev.target.value;
         datetime.locale = (!!value) ? value : 'default';
@@ -255,6 +270,12 @@
           document.body.classList.remove('dark');
         }
       });
+      color.addEventListener('ionChange', (ev) => {
+        datetime.color = ev.target.value;
+        buttons.forEach(button => {
+          button.color = ev.target.value;
+        })
+      })
     </script>
   </body>
 </html>
