--- a/core/src/components/datetime/datetime.ios.scss
+++ b/core/src/components/datetime/datetime.ios.scss
@@ -5,13 +5,17 @@
 :host {
   --background: var(--ion-color-step-100, #ffffff);
 
+  display: flex;
+
+  flex-flow: column;
+
   width: 316px;
 }
 
 // Header
 // -----------------------------------
 :host .datetime-header {
-  @include padding($datetime-ios-header-padding, $datetime-ios-header-padding, $datetime-ios-header-padding, $datetime-ios-header-padding);
+  @include padding($datetime-ios-padding, $datetime-ios-padding, $datetime-ios-padding, $datetime-ios-padding);
 
   border-bottom: $datetime-ios-border-color;
 }
@@ -24,14 +28,138 @@
 
 // Calendar
 // -----------------------------------
+
+/**
+ * This allows the calendar to take
+ * up 100% of the remaining height.
+ * On iOS, if there are more than
+ * 5 rows of dates, the dates should
+ * be resized to fit into this
+ * container.
+ */
 :host .datetime-calendar {
-  height: 209px;
+  display: flex;
+
+  flex: 1 1 auto;
+
+  flex-flow: column;
+}
+
+// Calendar / Header / Action Buttons
+// -----------------------------------
+:host .calendar-action-buttons ion-item {
+  --padding-start: #{$datetime-ios-padding};
+  --background-hover: transparent;
+  --background-activated: transparent;
+}
+
+:host .calendar-action-buttons ion-item ion-icon,
+:host .calendar-action-buttons ion-buttons ion-button {
+  color: current-color(base);
+}
+
+:host .calendar-action-buttons ion-buttons {
+  @include padding($datetime-ios-padding / 2, 0, 0, 0);
+}
+
+:host .calendar-action-buttons ion-buttons ion-button {
+  @include margin(0, 0, 0, 0);
+}
+
+// Calendar / Header / Days of Week
+// -----------------------------------
+:host .calendar-days-of-week {
+  @include padding(0, $datetime-ios-padding / 2, 0, $datetime-ios-padding / 2);
+
+  color: $text-color-step-700;
+
+  font-size: 12px;
+
+  font-weight: 600;
+
+  line-height: 24px;
+
+  text-transform: uppercase;
+}
+
+// Calendar / Body
+// -----------------------------------
+:host .calendar-body .calendar-month .calendar-month-grid {
+
+  /**
+   * We need to apply the padding to
+   * each month grid item otherwise
+   * older versions of WebKit will consider
+   * this padding a snapping point if applied
+   * on .calendar-month
+   */
+  @include padding($datetime-ios-padding / 2, $datetime-ios-padding / 2, $datetime-ios-padding / 2, $datetime-ios-padding / 2);
+
+  height: calc(100% - #{$datetime-ios-padding});
+}
+
+:host .calendar-day {
+  font-size: 20px;
+}
+
+:host .calendar-day:after {
+  opacity: 0.2;
+}
+
+:host .calendar-day:focus:after {
+  background: current-color(base);
+}
+
+/**
+ * Day that today but not selected
+ * should have ion-color for text color.
+ */
+:host .calendar-day.calendar-day-today {
+  color: current-color(base);
+}
+
+/**
+ * Day that is not today but
+ * is selected should have ion-color for
+ * text color and be bolder.
+ */
+:host .calendar-day.calendar-day-active {
+  color: current-color(base);
+
+  font-weight: 600;
+}
+
+:host .calendar-day.calendar-day-active:after {
+  background: current-color(base);
+}
+
+/**
+ * Day that is not today but
+ * is selected should have ion-color for
+ * text color and be bolder.
+ */
+:host .calendar-day.calendar-day-active .calendar-day-content {
+  background: current-color(contrast);
+}
+
+/**
+ * Day that is selected and is today
+ * should have white color.
+ */
+:host .calendar-day.calendar-day-today.calendar-day-active {
+  color: var(--ion-text-color, #ffffff);
+}
+
+:host .calendar-day.calendar-day-today.calendar-day-active:after {
+  background: current-color(base);
+
+  opacity: 1;
 }
 
 // Footer
 // -----------------------------------
 :host .datetime-buttons {
-  @include padding($datetime-ios-footer-padding, $datetime-ios-footer-padding, $datetime-ios-footer-padding, $datetime-ios-footer-padding);
+  @include padding($datetime-ios-padding / 2, $datetime-ios-padding / 2, $datetime-ios-padding / 2, $datetime-ios-padding / 2);
 
   border-top: $datetime-ios-border-color;
 }
