--- a/core/src/components/datetime/datetime.md.scss
+++ b/core/src/components/datetime/datetime.md.scss
@@ -35,13 +35,90 @@
 :host .datetime-calendar,
 :host .datetime-time {
   width: 100%;
-  height: 328px;
+}
+
+// Calendar / Header / Action Buttons
+// -----------------------------------
+:host .datetime-calendar .calendar-action-buttons ion-item {
+  --padding-start: #{$datetime-md-header-padding};
+}
+
+:host .calendar-action-buttons ion-item,
+:host .calendar-action-buttons ion-button {
+  color: #{$text-color-step-350};
+}
+
+// Calendar / Header / Days of Week
+// -----------------------------------
+:host .calendar-days-of-week {
+  @include padding(0px, 10px, 0px, 10px);
+
+  color: $text-color-step-500;
+
+  font-size: 13px;
+
+  line-height: 36px;
+}
+
+// Calendar / Body
+// -----------------------------------
+:host .calendar-body .calendar-month .calendar-month-grid {
+  @include padding(0px, 10px, 0px, 10px);
+
+  /**
+   * Calendar on MD will show an empty row
+   * if not enough dates to fill 6th row.
+   * Calendar on iOS fits all dates into
+   * a fixed number of rows and resizes
+   * if necessary.
+   */
+  grid-template-rows: repeat(6, 1fr);
+
+}
+
+:host .calendar-day {
+  @include padding(13px, 0, 13px, 0px);
+
+  font-size: 14px;
+}
+
+:host .calendar-day:focus:after {
+  background: current-color(base, 0.2);
+
+  box-shadow: 0px 0px 0px 4px current-color(base, 0.2);
+}
+
+/**
+ * Day that today but not selected
+ * should have ion-color for text color.
+ */
+:host .calendar-day.calendar-day-today {
+  color: current-color(base);
+}
+
+:host .calendar-day.calendar-day-today:after {
+  border: 1px solid current-color(base);
+}
+
+/**
+ * Day that is not today but
+ * is selected should have ion-color for
+ * text color and be bolder.
+ */
+:host .calendar-day.calendar-day-active {
+  color: current-color(contrast);
+}
+
+:host .calendar-day.calendar-day-active:after {
+  border: 1px solid current-color(base);
+
+  background: current-color(base);
 }
 
 // Footer
 // -----------------------------------
 :host .datetime-buttons {
-  @include padding(7px, 14px, 7px, 12px);
+  @include padding(10px, 10px, 10px, 10px);
 
   display: flex;
 
