--- a/core/src/components/datetime/datetime.scss
+++ b/core/src/components/datetime/datetime.scss
@@ -28,6 +28,20 @@
   background: var(--background);
 }
 
+:host(.datetime-readonly),
+:host(.datetime-disabled) {
+  pointer-events: none;
+}
+
+:host(.datetime-disabled) {
+  opacity: 0.4;
+}
+
+/**
+ * Title should not wrap
+ * to the next line and should
+ * show ellipsis instead.
+ */
 :host .datetime-header .datetime-title {
   text-overflow: ellipsis;
 
@@ -35,6 +49,173 @@
 
   overflow: hidden;
 }
+
+// Calendar / Header / Action Buttons
+// -----------------------------------
+
+/**
+ * Date/Year button should be on
+ * the opposite side of the component
+ * as the Next/Prev buttons
+ */
+:host .calendar-action-buttons {
+  display: flex;
+
+  justify-content: space-between;
+}
+
+:host .calendar-action-buttons ion-item,
+:host .calendar-action-buttons ion-button {
+  --background: translucent;
+}
+
+:host .calendar-action-buttons ion-item ion-label {
+  display: flex;
+
+  align-items: center;
+}
+
+:host .calendar-action-buttons ion-item ion-icon {
+  @include padding(0, 0, 0, 4px);
+}
+
+// Calendar / Header / Days of Week
+// -----------------------------------
+:host .calendar-days-of-week {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+
+  text-align: center;
+}
+
+// Calendar / Body
+// -----------------------------------
+:host .calendar-body {
+
+  /**
+   * Show all calendar months inline
+   * and allow them to take up 100% of
+   * the free space. Do not use CSS Grid
+   * here as there are issues with nested grid
+   * on older browsers.
+   */
+  display: flex;
+
+  flex-grow: 1;
+
+  scroll-snap-type: x mandatory;
+
+  /**
+   * Need to explicitly set overflow-y: hidden
+   * for older implementations of scroll snapping.
+   */
+  overflow-x: scroll;
+  overflow-y: hidden;
+
+  // Hide scrollbars on Firefox
+  scrollbar-width: none;
+}
+
+:host .calendar-body .calendar-month {
+  /**
+   * Swiping should snap to at
+   * most one month at a time.
+   */
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
+
+  flex-shrink: 0;
+
+  width: 100%;
+}
+
+/**
+ * Hide scrollbars on Chrome and Safari
+ */
+:host .calendar-body::-webkit-scrollbar {
+  display: none;
+}
+
+:host .calendar-body .calendar-month-grid {
+  /**
+   * Create 7 columns for
+   * 7 days in a week.
+   */
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+
+  height: 100%;
+}
+
+/**
+ * Center the day text vertically
+ * and horizontally within its grid cell.
+ */
+:host .calendar-day {
+  @include padding(0px, 0px, 0px, 0px);
+  @include margin(0px, 0px, 0px, 0px);
+
+  display: flex;
+
+  position: relative;
+
+  align-items: center;
+  justify-content: center;
+
+  border: none;
+
+  outline: none;
+
+  background: none;
+  color: currentColor;
+
+  cursor: pointer;
+
+  appearance: none;
+
+  z-index: 0;
+}
+
+:host .calendar-day[disabled] {
+  pointer-events: none;
+
+  opacity: 0.4;
+}
+
+:host .calendar-day:after {
+  @include border-radius(32px, 32px, 32px, 32px);
+  @include padding(4px, 4px, 4px, 4px);
+  /**
+   * Explicit position values are required here
+   * as pseudo element positioning is incorrect
+   * in older implementations of css grid.
+   */
+
+  @include position(50%, null, null, 50%);
+
+  position: absolute;
+
+  width: 32px;
+  height: 32px;
+
+  transform: translate(-50%, -50%);
+
+  content: " ";
+
+  z-index: -1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 :host(.in-item) {
   position: static;
@@ -51,10 +232,6 @@
 
 :host(.datetime-readonly) {
   pointer-events: none;
-}
-
-button {
-  @include input-cover();
 }
 
 .datetime-text {
