--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -355,7 +355,7 @@ button, a {
 // Item Input Highlight
 // --------------------------------------------------
 
-.item-highlight,
+// .item-highlight,
 .item-inner-highlight {
   @include position(null, 0, 0, 0);
 
@@ -366,9 +366,9 @@ button, a {
   z-index: 1;
 }
 
-.item-highlight {
-  height: var(--full-highlight-height);
-}
+// .item-highlight {
+//   height: var(--full-highlight-height);
+// }
 
 .item-inner-highlight {
   height: var(--inset-highlight-height);
