--- a/core/src/components/modal/test/custom/index.html
+++ b/core/src/components/modal/test/custom/index.html
@@ -11,22 +11,27 @@
   <script nomodule src="../../../../../dist/ionic/ionic.js"></script>
   <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
   <style>
-  .custom-modal {
-    --height: 70%;
-    --border-style: solid;
-    --border-width: 7px 0 0 0;
-    --border-color: #0d51aa;
-    --border-radius: 20px 20px 0 0;
-
-    align-items: flex-end;
-  }
-
-  @media (max-width: 400px) {
     .custom-modal {
-      --max-width: 98%;
-      --height: 98%;
+      --height: 70%;
+      --border-style: solid;
+      --border-width: 7px 0 0 0;
+      --border-color: #0d51aa;
+      --border-radius: 20px 20px 0 0;
+
+      align-items: flex-end;
     }
-  }
+
+    .custom-modal ion-toolbar {
+      --padding-top: 46px;
+      --padding-bottom: 10px;
+    }
+
+    @media (max-width: 400px) {
+      .custom-modal {
+        --max-width: 98%;
+        --height: 98%;
+      }
+    }
   </style>
 </head>
 
@@ -55,13 +60,23 @@
       element.innerHTML = `
       <ion-header>
         <ion-toolbar>
+          <ion-buttons slot="start">
+            <ion-button>
+              <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+            </ion-button>
+          </ion-buttons>
           <ion-title>Super Modal</ion-title>
+          <ion-buttons slot="end">
+            <ion-button class="dismiss">
+              Close
+            </ion-button>
+          </ion-buttons>
         </ion-toolbar>
       </ion-header>
       <ion-content>
         <h1>Content of doom</h1>
         <div>Here's some more content</div>
-        <ion-button class="dismiss">Dismiss Modal</ion-button>
+        <ion-button class="dismiss" class="dismiss">Dismiss Modal</ion-button>
       </ion-content>
       `;
 
@@ -72,10 +87,12 @@
       });
 
       // listen for close event
-      const button = element.querySelector('ion-button');
-      button.addEventListener('click', () => {
-        modalElement.dismiss();
-      });
+      const buttons = element.querySelectorAll('.dismiss');
+      for (var button of buttons) {
+        button.addEventListener('click', () => {
+          modalElement.dismiss();
+        });
+      }
       document.body.appendChild(modalElement);
       return modalElement;
     }
