test(modal): custom not basic

--- a/core/src/components/modal/test/custom/index.html
+++ b/core/src/components/modal/test/custom/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Modal - Basic</title>
+  <title>Modal - Custom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="../../../../../css/ionic.bundle.css" rel="stylesheet">
   <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
     <ion-header>
       <ion-toolbar>
-        <ion-title>Modal - Basic</ion-title>
+        <ion-title>Modal - Custom</ion-title>
       </ion-toolbar>
     </ion-header>
 
