--- a/core/src/components/item/item.md.vars.scss
+++ b/core/src/components/item/item.md.vars.scss
@@ -45,8 +45,8 @@ $item-md-border-bottom-width:               1px !default;
 /// @prop - Border bottom style for the item when lines are displayed
 $item-md-border-bottom-style:               solid !default;
 
-/// @prop - Border bottom color for the item when lines are displayed
-$item-md-border-bottom-color:               $item-md-border-color !default;
+/// @prop - Border bottom color for the item when lines are displayed 
+$item-md-border-bottom-color:               #8f8f8f !default;
 
 /// @prop - Border bottom for the item when lines are displayed
 $item-md-border-bottom:                     $item-md-border-bottom-width $item-md-border-bottom-style $item-md-border-color !default;
@@ -124,7 +124,7 @@ $item-md-icon-slot-margin-start:            null !default;
 $item-md-icon-start-slot-margin-start:      null !default;
 
 /// @prop - Margin end for an icon in the start slot
-$item-md-icon-start-slot-margin-end:        16px !default;
+$item-md-icon-start-slot-margin-end:        8px !default;
 
 /// @prop - Margin start for an icon in the end slot
 $item-md-icon-end-slot-margin-start:        16px !default;
