--- a/core/src/components/item/item.md.scss
+++ b/core/src/components/item/item.md.scss
@@ -304,14 +304,13 @@
 // --------------------------------------------------
 
 :host(.item-fill-solid) {
-  @include border-radius(4px, 4px, 0, 0);
-
   --background: #f5f5f5;
   --background-hover: #ECECEC;
   --background-focused: #DBDBDB;
-
   --border-width: 0 0 #{$item-md-border-bottom-width} 0;
   --inner-border-width: 0;
+
+  @include border-radius(4px, 4px, 0, 0);
 
   .item-native:hover {
     --background: var(--background-hover);
@@ -340,18 +339,18 @@
 // --------------------------------------------------
 
 :host(.item-fill-outline) {
-  overflow: visible;
+  --border-color: #9e9e9e;
+  --border-width: #{$item-md-border-bottom-width};
   border: none;
 
-  --border-color: #9e9e9e;
-
-  --border-width: #{$item-md-border-bottom-width};
+  overflow: visible;
 }
 
 :host(.item-fill-outline) .item-native {
+  --native-padding-left: 16px;
+
   @include border-radius(4px);
   border: none;
-  --native-padding-left: 16px;
 
   &:hover {
     --border-color: var(--highlight-color-hover);
@@ -387,8 +386,8 @@
 
 :host(.item-fill-outline.item-has-focus) .item-native {
   .item-highlight {
-    border-color: var(--highlight-color-focused);
     border-width: var(--highlight-height);
+    border-color: var(--highlight-color-focused);
   }
 }
 
@@ -409,15 +408,11 @@
 // Material Design Item: Invalid
 // --------------------------------------------------
 
-:host(.ion-invalid) .item-native {
+:host(:is(.ion-invalid,.ion-invalid.item-has-focus)) .item-native {
   border-color: var(--highlight-color-invalid);
-  caret-color: var(--highlight-color-invalid) !important;
+  caret-color: var(--highlight-color-invalid);
 
   .item-highlight {
     border-color: var(--highlight-color-invalid);
   }
-}
-
-:host(.ion-invalid.item-has-focus) .item-native .item-highlight {
-  border-color: var(--highlight-color-invalid);
 }
