--- a/core/src/components/item/item.mixins.scss
+++ b/core/src/components/item/item.mixins.scss
@@ -15,7 +15,10 @@
   width: 100%;
   height: 100%;
 
-  border-radius: inherit;
   box-sizing: border-box;
   pointer-events: none;
+
+  /* stylelint-disable property-blacklist */
+  border-radius: inherit;
+  /* stylelint-enable property-blacklist */
 }
