--- a/core/src/components/datetime/datetime.md.vars.scss
+++ b/core/src/components/datetime/datetime.md.vars.scss
@@ -3,3 +3,15 @@
 
 /// @prop - Padding for content in header
 $datetime-md-header-padding:       20px !default;
+
+/// @prop - Padding for content
+$datetime-md-padding:              16px !default;
+
+/// @prop - Height of the time picker
+$datetime-md-time-height:          28px !default;
+
+/// @prop - Width of the time picker
+$datetime-md-time-width:           68px !default;
+
+/// @prop - Border radius of the time picker
+$datetime-md-time-border-radius:   4px !default;
