--- a/core/src/components/datetime/datetime.ios.scss
+++ b/core/src/components/datetime/datetime.ios.scss
@@ -51,6 +51,9 @@
   --padding-start: #{$datetime-ios-padding};
   --background-hover: transparent;
   --background-activated: transparent;
+
+  font-size: 16px;
+  font-weight: 600;
 }
 
 :host .calendar-action-buttons ion-item ion-icon,
@@ -154,6 +157,89 @@
   background: current-color(base);
 
   opacity: 1;
+}
+
+:host .calendar-day {
+  font-size: 20px;
+}
+
+:host .calendar-day:after {
+  opacity: 0.2;
+}
+
+:host .calendar-day:focus:after {
+  background: current-color(base);
+}
+
+/**
+ * Day that today but not selected
+ * should have ion-color for text color.
+ */
+:host .calendar-day.calendar-day-today {
+  color: current-color(base);
+}
+
+/**
+ * Day that is not today but
+ * is selected should have ion-color for
+ * text color and be bolder.
+ */
+:host .calendar-day.calendar-day-active {
+  color: current-color(base);
+
+  font-weight: 600;
+}
+
+:host .calendar-day.calendar-day-active:after {
+  background: current-color(base);
+}
+
+/**
+ * Day that is not today but
+ * is selected should have ion-color for
+ * text color and be bolder.
+ */
+:host .calendar-day.calendar-day-active .calendar-day-content {
+  background: current-color(contrast);
+}
+
+/**
+ * Day that is selected and is today
+ * should have white color.
+ */
+:host .calendar-day.calendar-day-today.calendar-day-active {
+  color: var(--ion-text-color, #ffffff);
+}
+
+:host .calendar-day.calendar-day-today.calendar-day-active:after {
+  background: current-color(base);
+
+  opacity: 1;
+}
+
+// Time / Header
+// -----------------------------------
+:host .datetime-time {
+  @include padding($datetime-ios-padding / 2, $datetime-ios-padding, $datetime-ios-padding, $datetime-ios-padding);
+
+  font-size: 16px;
+  font-weight: 600;
+}
+
+:host .time-base {
+  @include border-radius($datetime-ios-time-border-radius, $datetime-ios-time-border-radius, $datetime-ios-time-border-radius, $datetime-ios-time-border-radius);
+  @include margin(0, $datetime-ios-padding / 2, 0, 0);
+
+  width: $datetime-ios-time-width;
+  height: $datetime-ios-time-height;
+}
+
+:host .time-column {
+  @include border-radius($datetime-ios-time-border-radius, $datetime-ios-time-border-radius, $datetime-ios-time-border-radius, $datetime-ios-time-border-radius);
+}
+
+:host .time-item {
+  line-height: $datetime-ios-time-height;
 }
 
 // Footer
