--- a/core/src/components/datetime/datetime.md.scss
+++ b/core/src/components/datetime/datetime.md.scss
@@ -151,6 +151,79 @@
   background: var(--background-checked);
 }
 
+// Year Picker
+// -----------------------------------
+:host .show-month-and-year .datetime-footer {
+  border-top: 1px solid var(--ion-color-step-250, #dddddd);
+}
+
+:host .datetime-month-and-year {
+  @include padding($datetime-md-padding, $datetime-md-padding, $datetime-md-padding, $datetime-md-padding);
+
+  grid-template-columns: repeat(auto-fit, minmax(74px, 1fr));
+  grid-gap: 0px 10px;
+
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+
+  height: 200px;
+}
+
+:host .datetime-year {
+  @include padding(0px, 0px, 0px, 0px);
+  @include margin(0px, 0px, 0px, 0px);
+
+  position: relative;
+
+  align-items: center;
+  justify-content: center;
+
+  border: none;
+
+  outline: none;
+
+  background: none;
+  color: currentColor;
+
+  cursor: pointer;
+
+  appearance: none;
+
+  z-index: 0;
+}
+
+:host .datetime-year .datetime-year-inner {
+  @include border-radius(20px, 20px, 20px, 20px);
+
+  border: 1px solid transparent;
+
+  margin: 10px;
+
+  height: 32px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 16px;
+}
+
+:host .datetime-current-year .datetime-year-inner {
+  border: 1px solid current-color(base);
+  color: current-color(base);
+}
+:host .datetime-active-year .datetime-year-inner {
+  border: 1px solid current-color(base);
+  background: current-color(base);
+  color: current-color(contrast);
+}
+
+@media (any-hover: hover) {
+  :host .datetime-year:hover {
+    background: current-color(base, 0.1);
+  }
+}
+
 
 // Footer
 // -----------------------------------
