--- a/core/src/components/datetime/datetime.md.scss
+++ b/core/src/components/datetime/datetime.md.scss
@@ -153,23 +153,31 @@
 
 // Year Picker
 // -----------------------------------
-:host .show-month-and-year .datetime-footer {
+:host(.show-month-and-year) .datetime-calendar {
+  flex: 0;
+}
+:host(.show-month-and-year) .datetime-year {
+  flex: 1;
+
+  min-height: 0;
+}
+:host(.show-month-and-year) .datetime-footer {
   border-top: 1px solid var(--ion-color-step-250, #dddddd);
 }
 
-:host .datetime-month-and-year {
+:host .datetime-year-body {
   @include padding($datetime-md-padding, $datetime-md-padding, $datetime-md-padding, $datetime-md-padding);
+
+  display: grid;
 
   grid-template-columns: repeat(auto-fit, minmax(74px, 1fr));
   grid-gap: 0px 10px;
 
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
-
-  height: 200px;
 }
 
-:host .datetime-year {
+:host .datetime-year-item {
   @include padding(0px, 0px, 0px, 0px);
   @include margin(0px, 0px, 0px, 0px);
 
@@ -192,34 +200,36 @@
   z-index: 0;
 }
 
-:host .datetime-year .datetime-year-inner {
+:host .datetime-year-item .datetime-year-inner {
   @include border-radius(20px, 20px, 20px, 20px);
+  @include margin(10px, 10px, 10px, 10px);
 
-  border: 1px solid transparent;
+  display: flex;
 
-  margin: 10px;
+  align-items: center;
+  justify-content: center;
 
   height: 32px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border: 1px solid transparent;
 
   font-size: 16px;
 }
 
 :host .datetime-current-year .datetime-year-inner {
   border: 1px solid current-color(base);
+
   color: current-color(base);
 }
 :host .datetime-active-year .datetime-year-inner {
   border: 1px solid current-color(base);
+
   background: current-color(base);
   color: current-color(contrast);
 }
 
 @media (any-hover: hover) {
-  :host .datetime-year:hover {
+  :host .datetime-year-item:hover {
     background: current-color(base, 0.1);
   }
 }
