--- a/core/src/components/datetime/datetime.ios.scss
+++ b/core/src/components/datetime/datetime.ios.scss
@@ -8,6 +8,13 @@
   width: 316px;
 }
 
+// TODO: Fix me
+@media (prefers-color-scheme: dark) {
+  :host {
+    --background-rgb: 26, 26, 26;
+  }
+}
+
 // Header
 // -----------------------------------
 :host .datetime-header {
@@ -217,6 +224,124 @@
 
 :host .time-item {
   line-height: $datetime-ios-time-height;
+}
+
+// Year Picker
+// -----------------------------------
+:host(.show-month-and-year) .calendar-action-buttons ion-item {
+  --color: #{current-color(base)};
+}
+
+:host .datetime-year-body .datetime-picker-col {
+  @include margin(0, 10px, 0, 10px);
+  @include padding(0, $datetime-ios-padding, 0, $datetime-ios-padding);
+}
+
+:host .datetime-picker-before {
+  @include position(0, null, null, 0);
+
+  position: absolute;
+
+  width: 100%;
+
+  height: 82px;
+
+  background: linear-gradient(to bottom, var(--background, var(--ion-background-color, #fff)) 20%, rgba(var(--background-rgb, var(--ion-background-color-rgb, 255, 255, 255)), 0.8) 100%);
+
+  z-index: 10;
+
+  pointer-events: none;
+}
+
+:host .datetime-picker-after {
+  @include position(116px, null, null, 0);
+
+  position: absolute;
+
+  width: 100%;
+
+  height: 115px;
+
+  background: linear-gradient(to top, var(--background, var(--ion-background-color, #fff)) 30%, rgba(var(--background-rgb, var(--ion-background-color-rgb, 255, 255, 255)), 0.8) 100%);
+
+  z-index: 10;
+
+  pointer-events: none;
+}
+
+:host .datetime-picker-highlight {
+  @include position(50%, 0, 0, 0);
+  @include border-radius($datetime-ios-time-border-radius, $datetime-ios-time-border-radius, $datetime-ios-time-border-radius, $datetime-ios-time-border-radius);
+  @include margin(0, auto, 0, auto);
+
+  position: absolute;
+
+  width: calc(100% - #{$datetime-ios-padding * 2});
+
+  height: 34px;
+
+  transform: translateY(-50%);
+
+  background: var(--ion-color-step-150, #eeeeef);
+
+  z-index: -1;
+}
+
+:host .datetime-year-body {
+  display: flex;
+
+  position: relative;
+
+  align-items: center;
+
+  justify-content: center;
+
+  font-size: 22px;
+}
+
+:host .datetime-picker-col {
+  scroll-snap-type: y mandatory;
+
+  /**
+   * Need to explicitly set overflow-x: hidden
+   * for older implementations of scroll snapping.
+   */
+  overflow-x: hidden;
+  overflow-y: scroll;
+
+  // Hide scrollbars on Firefox
+  scrollbar-width: none;
+
+  height: 200px;
+}
+
+/**
+ * Hide scrollbars on Chrome and Safari
+ */
+:host .datetime-picker-col::-webkit-scrollbar {
+  display: none;
+}
+
+
+:host .picker-col-item {
+  height: 34px;
+
+  line-height: 34px;
+
+  scroll-snap-align: center;
+}
+
+:host .picker-col-item-empty {
+  scroll-snap-align: none;
+}
+
+
+:host .datetime-year-body .datetime-picker-col:first-of-type {
+  text-align: left;
+}
+
+:host .datetime-year-body .datetime-picker-col:last-of-type {
+  text-align: right;
 }
 
 // Footer
